tests/negative/typecheck/infer_not_in.orng
fn main () -> Int {
    let x: (a | b | c) = .d
    0
}